# beam

./: .backportrc.json  .eslintignore  .eslintrc  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  components.d.ts  mypy.ini  package.json  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: init.sh
.github/: validate_customizations.py
.github/helper/: install.sh  install_dependencies.sh  site_config.json
.github/workflows/: backport.yaml  generate_matrix.yaml  lint.yaml  pytest.yaml  release.yaml
beam/: __init__.py  customize.py  hooks.py  install.py  modules.txt
beam/beam/: __init__.py  barcodes.py  boot.py  demand.py  handling_unit.py  printing.py
beam/config/: desktop.py  docs.py
beam/docs/: demand.md  form.md  generate_matrix.py  handling_unit.md  hooks.md  hu_traceability_report.md  index.md  listview.md  matrix.md  print_server.md  testing.md  zebra_printing.md
beam/tests/: boot.py  conftest.py  fixtures.py  setup.py  test_demand.py  test_handling_unit.py  test_hooks_override.py  test_receiving_demand.py  test_scan.py
beam/www/: demand.html  demand.py
cups/: .env.example  Caddy.Dockerfile  Caddyfile  Certbot.Dockerfile  Certbot2.Dockerfile  Cups.Dockerfile  README.md  caddy-entrypoint.sh  docker-compose.yml  podman-compose.yml  renew-certificates.sh
cups/caddy/: Caddyfile.localhost  Caddyfile.not_ssl  Caddyfile.ssl  Containerfile  Dockerfile  entrypoint.sh
cups/cups/: Containerfile  Dockerfile  cupsd.conf
pre-commit/: validate_customizations.py
(+108 files in other folders)
