[tool.poetry]
name = "beam"
version = "15.3.0"
authors = ["AgriTheory <support@agritheory.dev>"]
description = "Barcode Scanning for ERPNext"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
python-barcode = "^0.15.1"
zebra-zpl = {git = "https://github.com/mtking2/py-zebra-zpl.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-order = "^1.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=beam --cov-report term-missing"

[tool.black]
line-length = 99

[tool.codespell]
skip = '*.md'

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.version]
match = "version-15"
